[gd_scene load_steps=3 format=2]

[ext_resource path="res://GameOver.gd" type="Script" id=1]
[ext_resource path="res://pixel_font.tres" type="DynamicFont" id=2]

[node name="GameOver" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_top = 300.0
margin_right = 640.0
margin_bottom = 314.0

[node name="Continue" type="Label" parent="CenterContainer2"]
margin_left = 207.0
margin_right = 432.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Press any key to continue"
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 640.0
margin_bottom = 320.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 257.0
margin_top = 117.0
margin_right = 382.0
margin_bottom = 203.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 125.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "GAME OVER!"
align = 1

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 125.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 125.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 2 )
text = "Score:"
align = 1

[node name="VBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 125.0
margin_bottom = 68.0
alignment = 1

[node name="Player1Name" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 72.0
margin_bottom = 14.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 2 )
text = "Player 1"
__meta__ = {
"_edit_lock_": true
}

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_left = 76.0
margin_right = 112.0
margin_bottom = 14.0
text = "         "

[node name="Player1Score" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_left = 116.0
margin_right = 125.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 125.0
margin_bottom = 86.0
alignment = 1

[node name="Player2Name" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
margin_right = 72.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Player 2"
__meta__ = {
"_edit_lock_": true
}

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
margin_left = 76.0
margin_right = 112.0
margin_bottom = 14.0
text = "         "

[node name="Player2Score" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
margin_left = 116.0
margin_right = 125.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2
__meta__ = {
"_edit_lock_": true
}
